# fs-line_notify_scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml  main.yml
src/fs_scraper/: __init__.py  main.py
